pass word mongodb

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = mongodb+srv://tuyennn:14Fl0Rte28sxa2HO@cluster0.1i1hosm.mongodb.net/
+MONGODB_URI = mongodb+srv://tuyennn:tuyenicd123@cluster0.1i1hosm.mongodb.net/
